DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Mar-20-2005 patrickh    Added functions to the JCCL Config Java classes that
                        are useful in performing base type operations on config
                        definitions.
                        NEW VERSION: 0.92.9
Mar-14-2005 patrickh    Provide public Java classes for allowing ConfigElement
                        references to be stored in the Java clipboard.
                        NEW VERSION: 0.92.8
Mar-05-2005 patrickh    Extended the config definition editor to support
                        adding and removing parents.  This added two new
                        methods (for adding and removing parents) to
                        org.vrjuggler.jccl.config.ConfigDefinition and
                        org.vrjuggler.jccl.config.event.ConfigDefinitionListener.
                        NEW VERSION: 0.92.7
Mar-01-2005 patrickh    Added an overload of
                        org.vrjuggler.jccl.config.ConfigElement.setName() that
                        supports undoing the name change operation.
                        NEW VERSION: 0.92.6
Feb-22-2005 patrickh    Extended org.vrjuggler.jccl.config.ConfigBroker to
                        include overloads of add() and remove() for new
                        ConfigElement objects that allow the caller to provide
                        the data source to which the element will be added.
                        NEW VERSION: 0.92.5
Feb-17-2005 patrickh    Allow org.vrjuggler.jccl.config.ConfigElementPointer
                        references to be passed as the property value for
                        org.vrjuggler.jccl.config.ConfigElement.setProperty().
                        NEW VERSION: 0.92.4
Feb-15-2005 patrickh    Extended org.vrjuggler.jccl.config.ConfigUndoManager to
                        provide automatmed multiple undo/redo operations.